@@ -1,5 +1,8 @@
 Changes with APR-util b1  
 
+  *) Added apr_xml_parse_file() routine and a testxml program.
+     [Ian Holsman <ianh@cnet.com>]
+
   *) Extend apr_bucket_type_t to add a pointer to a function used
      to free the bucket. This change enables custom buckets to
      completely specify how they are to be allocated and freed.
